--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -2,28 +2,28 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
 
-  .postContent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.title {
+  margin-bottom: 10px;
+}
+
+.image {
+  width: 400px;
+  height: 300px;
+  margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+  .posImage {
     width: 100%;
-    margin-bottom: 10px;
-
-    .postTitle {
-      margin-bottom: 10px;
-    }
-
-    .postImage {
-      width: 400px;
-      height: 300px;
-      margin-bottom: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .posImage {
-        width: 100%;
-      }
-    }
   }
 }
