--- a/src/components/Article/Article.module.scss
+++ b/src/components/Article/Article.module.scss
@@ -4,22 +4,22 @@
   max-width: 1300px;
   margin: 0 auto;
   box-sizing: border-box;
+}
 
-  &Back {
-    position: absolute;
-    left: 3rem;
-    font-size: 2rem;
-    top: 4rem;
-    color: black;
-    text-decoration: none;
-  }
+.Back {
+  position: absolute;
+  left: 40px;
+  font-size: 2rem;
+  top: 80px;
+  color: black;
+  text-decoration: none;
 }
 
 @media only screen and (max-width: 800px) {
   .article {
     padding: 1rem;
 
-    &Back {
+    .Back {
       position: static;
     }
   }
