--- a/src/components/PostGrid/PostGrid.module.scss
+++ b/src/components/PostGrid/PostGrid.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
-  margin-bottom: 3rem;
+  padding: 0 50px;
 }
 
 @media only screen and (max-width: 1000px) {
