--- a/src/styles/fighters.module.scss
+++ b/src/styles/fighters.module.scss
@@ -1,3 +1,23 @@
-.title {
-  color: yellow;
+$background-color: #2c3e50;
+$table-color: #34495e;
+$text-color: #ffffff;
+
+.fighters-table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: $table-color;
+  color: $text-color;
+  font-family: Arial, sans-serif;
+}
+
+.fighter {
+  margin-bottom: 5px;
+  color: $text-color;
+}
+
+.th,
+.td {
+  background-color: $table-color;
+  padding: 10px;
+  vertical-align: top;
 }
